<resources>
    <string name="app_name">Music Router</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_service">Service</string>
    <string name="description_service">Enable service. If it\'s disabled, changing routing is not working. But if you disable this button, you can save the battery when you don\'t use music routing.</string>
    <string name="title_devices">Devices</string>
    <string name="description_devices">Choose routing device you want. If the service switch is disabled, then it would not working.</string>

    <string name="msg_initialize_routing">Initialize routing device...</string>
    <string name="msg_selected_device">Selected Device: </string>
    <string name="msg_plz_service_enable">Please enable service first</string>

    <!--Notification-->
    <string name="notification_channel_description">Notify channel for MusicRouter service is running.</string>
    <string name="notification_channel_name">MusicRouter Service channel</string>
    <string name="notification_title">MusicRouter Service</string>
    <string name="notification_content">MusicRouter service is running...</string>

    <string name="switch_service">Service Enable / Disable</string>

    <string name="builtin_speaker">Builtin Speaker</string>
    <string name="wired_headset">Wired Headset</string>
    <string name="wired_headphones">Wired Headphones</string>
    <string name="aux_line">Aux Line</string>
    <string name="bluetooth_a2dp">Bluetooth A2DP</string>
    <string name="bluetooth_sco">Bluetooth SCO</string>
    <string name="builtin_earpiece">Builtin Earpiece</string>
    <string name="hdmi">HDMI</string>
    <string name="dock">Dock</string>
    <string name="hdmi_arc">HDMI ARC</string>
    <string name="usb_accessory">USB Accessory</string>
    <string name="usb_device">USB Device</string>
    <string name="usb_headset">USB Headset</string>
    <string name="type_unknown">Unknwon Device</string>
    <string name="line_analog">Line Analog</string>
    <string name="line_digital">Line Digital</string>

    <string name="settings_developer_name">maesiltea (pppljh@gmail.com)</string>
</resources>
